@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.7.1
 ====================================
+- [#5961] Add &trimPassword to automatically trim whitespace from submitted passwords
 - Add &generatePassword to automatically generate a password instead of having to provide one manually
 - [#6146] Add &validatePassword to Register to allow for manual password generation
 - [#5969] Add &user property to UpdateProfile to allow specifying user to update
